--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 </head>
 
 <body>
+	<div id="menu">
+		<a href="#">Home</a>
+		<a href="#">About Us</a>
+		<a href="#">Contact</a>
+	</div>
 	<div class="gallery">
 		<a href="avenger-1.html"><img src="images/avengers_01.jpg"/></a>
 		<a href="avenger-2.html"><img src="images/avengers_02.jpg"/></a>
