--- a/avenger-2.html
+++ b/avenger-2.html
@@ -5,6 +5,11 @@
     </head>
  
     <body> 
+		<div id="menu">
+			<a href="index.html">Home</a>
+			<a href="about.html">About Us</a>
+			<a href="contact.html">Contact</a>
+		</div>
 		<h2><b>Iron Man</b></h2>
 		<div class="gallery"> 
 			<img src="images/avengers_02.jpg"> 
